--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ember-cli-deploy-ssh2",
-  "version": "0.0.4",
-  "description": "An ember-cli-deploy plugin to upload activate and list versioned application file/s using ssh.",
+  "name": "ember-cli-deploy-with-rsync",
+  "version": "0.0.1",
+  "description": "An ember-cli-deploy plugin to upload, activate and list versioned application file/s using SSH and rsync.",
   "directories": {
     "doc": "doc",
     "test": "tests"
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "node tests/runner.js"
   },
-  "repository": "https://github.com/arenoir/ember-cli-deploy-ssh2",
+  "repository": "https://github.com/pgengler/ember-cli-deploy-with-rsync",
   "engines": {
     "node": ">= 0.10.0"
   },
@@ -52,6 +52,7 @@
     "lodash": "^3.10.1",
     "untildify": "^2.1.0",
     "node-fs": "^0.1.7",
+    "rsync": "^0.4.0",
     "ssh2": "^0.5.0",
     "username": "^1.0.1"
   },
