--- a/package.json
+++ b/package.json
@@ -2,57 +2,60 @@
   "name": "ember-cli-deploy-with-rsync",
   "version": "0.0.3",
   "description": "An ember-cli-deploy plugin to upload, activate and list versioned application file/s using SSH and rsync.",
-  "directories": {
-    "doc": "doc",
-    "test": "tests"
-  },
-  "scripts": {
-    "test": "node tests/runner.js"
-  },
-  "repository": "https://github.com/pgengler/ember-cli-deploy-with-rsync",
-  "engines": {
-    "node": ">= 6.0.0"
-  },
-  "author": "Phil Gengler",
-  "license": "MIT",
-  "devDependencies": {
-    "broccoli-asset-rev": "^2.2.0",
-    "chai": "^3.4.1",
-    "chai-as-promised": "^5.1.0",
-    "ember-cli": "1.13.12",
-    "ember-cli-app-version": "^1.0.0",
-    "ember-cli-content-security-policy": "0.4.0",
-    "ember-cli-dependency-checker": "^1.1.0",
-    "ember-cli-htmlbars": "^1.0.1",
-    "ember-cli-htmlbars-inline-precompile": "^0.3.1",
-    "ember-cli-ic-ajax": "0.2.4",
-    "ember-cli-inject-live-reload": "^1.3.1",
-    "ember-cli-qunit": "^1.0.4",
-    "ember-cli-release": "0.2.8",
-    "ember-cli-sri": "^1.1.0",
-    "ember-cli-uglify": "^1.2.0",
-    "ember-disable-prototype-extensions": "^1.0.0",
-    "ember-disable-proxy-controllers": "^1.0.1",
-    "ember-export-application-global": "^1.0.4",
-    "ember-try": "~0.0.8",
-    "glob": "^5.0.5",
-    "mocha": "^2.2.4",
-    "mocha-jshint": "^2.3.1",
-    "multiline": "^1.0.2"
-  },
   "keywords": [
     "ember-addon",
     "ember-cli-deploy-plugin"
   ],
+  "license": "MIT",
+  "author": "Phil Gengler",
+  "directories": {
+    "doc": "doc",
+    "test": "tests"
+  },
+  "repository": "https://github.com/pgengler/ember-cli-deploy-with-rsync",
+  "scripts": {
+    "test": "node tests/runner.js"
+  },
   "dependencies": {
     "broccoli-asset-rewrite": "^1.0.12",
     "chalk": "^1.1.3",
+    "ember-cli-babel": "^6.0.0",
     "ember-cli-deploy-plugin": "0.2.6",
     "node-fs": "^0.1.7",
-    "rsync": "^0.4.0",
+    "rsync": "^0.6.1",
     "ssh2": "^0.5.0",
-    "untildify": "^2.1.0",
-    "username": "^1.0.1"
+    "untildify": "^3.0.2",
+    "username": "^2.3.0"
+  },
+  "devDependencies": {
+    "broccoli-asset-rev": "^2.4.5",
+    "chai": "^3.4.1",
+    "chai-as-promised": "^6.0.0",
+    "ember-ajax": "^3.0.0",
+    "ember-cli": "2.13.1",
+    "ember-cli-dependency-checker": "^1.3.0",
+    "ember-cli-eslint": "^3.0.0",
+    "ember-cli-htmlbars": "^1.1.1",
+    "ember-cli-htmlbars-inline-precompile": "^0.4.0",
+    "ember-cli-inject-live-reload": "^1.4.1",
+    "ember-cli-qunit": "^4.0.0",
+    "ember-cli-release": "0.2.8",
+    "ember-cli-shims": "^1.1.0",
+    "ember-cli-sri": "^2.1.0",
+    "ember-cli-uglify": "^1.2.0",
+    "ember-disable-prototype-extensions": "^1.1.0",
+    "ember-export-application-global": "^2.0.0",
+    "ember-load-initializers": "^1.0.0",
+    "ember-resolver": "^4.0.0",
+    "ember-source": "~2.13.0",
+    "glob": "^7.1.1",
+    "loader.js": "^4.2.3",
+    "mocha": "^3.4.1",
+    "mocha-eslint": "^3.0.1",
+    "multiline": "^1.0.2"
+  },
+  "engines": {
+    "node": ">= 6.0.0"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
