--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "broccoli-asset-rewrite": "^1.0.12",
     "chalk": "^1.1.3",
     "ember-cli-babel": "^6.0.0",
-    "ember-cli-deploy-plugin": "0.2.6",
+    "ember-cli-deploy-plugin": "^0.2.9",
     "node-fs": "^0.1.7",
+    "rsvp": "^3.5.0",
     "rsync": "^0.6.1",
     "ssh2": "^0.5.0",
     "untildify": "^3.0.2",
