--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "node-fs": "^0.1.7",
     "rsync": "^0.6.1",
     "ssh2": "^1.16.0",
+    "temp-write": "^4.0.0",
     "untildify": "^3.0.2",
     "username": "^4.1.0"
   },
